tests/fails/f39.t
require("fail")

terra foo()
  return (4)[4]
end
foo()
